--- a/photoshare/photoshare/CommunityCollectionCell.xib
+++ b/photoshare/photoshare/CommunityCollectionCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CVCell" id="MLB-cz-1KC">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CVCell" id="MLB-cz-1KC" customClass="CollectionViewCell">
             <rect key="frame" x="0.0" y="0.0" width="90" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -32,6 +32,11 @@
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <size key="customSize" width="150" height="126"/>
+            <connections>
+                <outlet property="folder_imgV" destination="OdP-Pl-Lw5" id="xwo-Pp-3NN"/>
+                <outlet property="folder_name" destination="HjE-l3-44G" id="459-w3-fNX"/>
+                <outlet property="icon_img" destination="OfW-E2-zzr" id="b5n-bp-gtc"/>
+            </connections>
         </collectionViewCell>
     </objects>
     <resources>
