--- a/photoshare/photoshare/ReferralStageFourVC.xib
+++ b/photoshare/photoshare/ReferralStageFourVC.xib
@@ -67,6 +67,9 @@
                             <state key="normal" image="share-facebook.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="fbFilter_Btn:" destination="-1" eventType="touchUpInside" id="zZ3-dx-WOc"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOj-Bi-7Uj">
                             <rect key="frame" x="91" y="119" width="50" height="50"/>
@@ -74,6 +77,9 @@
                             <state key="normal" image="share-twitter.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="twFilter_Btn:" destination="-1" eventType="touchUpInside" id="VSK-iK-B9R"/>
+                            </connections>
                         </button>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Twitter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zYg-di-Boo">
                             <rect key="frame" x="92" y="171" width="49" height="21"/>
@@ -105,6 +111,9 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="smsFilter_Btn:" destination="-1" eventType="touchUpInside" id="2Ga-1f-kot"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UX0-B3-gSg">
                             <rect key="frame" x="171" y="119" width="55" height="50"/>
@@ -113,6 +122,9 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="emailFilter_Btn:" destination="-1" eventType="touchUpInside" id="G7d-gD-ftz"/>
+                            </connections>
                         </button>
                         <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" editable="NO" text="using your address book" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BD8-9W-wB7">
                             <rect key="frame" x="164" y="183" width="74" height="39"/>
