--- a/photoshare/photoshare/ReferFriendViewController.xib
+++ b/photoshare/photoshare/ReferFriendViewController.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" editable="NO" text="Choose a toolbox to help refer your friends" translatesAutoresizingMaskIntoConstraints="NO" id="1RP-d8-cxx">
-                    <rect key="frame" x="12" y="33" width="296" height="54"/>
+                    <rect key="frame" x="12" y="33" width="296" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="textColor" red="0.070859437159999997" green="0.6299059494" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -32,6 +32,9 @@
                         <segment title="Toolbox 2"/>
                         <segment title="Toolbox 3"/>
                     </segments>
+                    <connections>
+                        <action selector="toolbox_Controller:" destination="-1" eventType="valueChanged" id="qsS-IW-39f"/>
+                    </connections>
                 </segmentedControl>
                 <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1sJ-lM-kkB">
                     <rect key="frame" x="12" y="146" width="296" height="253"/>
